--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.5.2",
+    "redux-persist": "^4.0.0-alpha5",
     "redux-undo": "^1.0.0-beta9"
   },
   "scripts": {
@@ -21,5 +22,5 @@
   },
   "eslintConfig": {
     "extends": "./node_modules/react-scripts/config/eslint.js"
-  }    
+  }
 }
