--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,5 +9,6 @@
     }
   ],
   "start_url": "index.html",
-  "display": "standalone"
+  "display": "standalone",
+  "background_color": "#000000"    
 }
